@@ -1,4 +1,4 @@
-GNU tar NEWS - User visible changes. 2023-08-01
+GNU tar NEWS - User visible changes. 2023-08-02
 Please send GNU tar bug reports to <bug-tar@gnu.org>
 
 version TBD
@@ -23,6 +23,10 @@ as argument to --mtime option (see GNU tar manual, chapter 4
 
 Defines output format for the COMMAND set by the above option.  If
 used, command output will be parsed using strptime(3).
+
+* Bug fixes
+
+** tar no longer uses alloca, fixing an unlikely stack overflow.
 
 
 version 1.35 - Sergey Poznyakoff, 2023-07-18
